<resources>
    <string name="app_name">600 TOEIC Essential Words</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search any word</string>
    <string name="favorite">Favorite</string>
    <string name="no_favorite_word_found">No favorite word found!</string>
    <string name="app_name_display">600 TOEIC Essential Words</string>
    <string name="example"><u>Example:</u></string>
    <string name="no_record_found">No record found!</string>
    <string name="start">Start</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="choose_one">Please choose at least one topic</string>
    <string name="submit">Submit answer</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_submit">Do you really want to submit all answer?</string>
    <string name="your_name">Your name</string>
    <string name="save">Save</string>
    <string name="dont_save">Don\'t save</string>
    <string name="new_high_score">New high score</string>
    <string name="correct_answer">Correct answers</string>
    <string name="point">Point</string>
    <string name="close">Close</string>
    <string name="points">points</string>
    <string name="question">Question</string>
    <string name="quit">Quit?</string>
    <string name="confirm_quit_test">If you quit, this test will not be saved! Do you really want to quit?</string>
    <string name="high_score">High score</string>
    <string name="test">Test</string>
    <string name="topic">Topic</string>
    <string name="dictionary">Dictionary</string>
    <string name="name">Name</string>
    <string name="rank">Rank</string>
    <string name="reset_high_score">Reset high score</string>
    <string name="confirm_reset">Do you really want to delete all score records</string>
    <string name="notification_title">Favorite word reminder</string>
    <string name="notification_content">is your favorite word!</string>
</resources>
