<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:minWidth="300dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/normal_padding_size"
        android:paddingStart="@dimen/normal_padding_size"
        android:paddingTop="@dimen/normal_padding_size"
        android:text="@string/submit"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_mess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_padding_size"
        android:maxLines="2"
        android:selectAllOnFocus="true"
        android:text="@string/confirm_submit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/grid_item_padding_size"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_yes"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textColor="@color/primary" />

        <Button
            android:id="@+id/btn_no"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textColor="@color/primary" />
    </LinearLayout>
</LinearLayout>