<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:padding="@dimen/normal_padding_size">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/new_high_score"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/grid_item_padding_size"
            android:text="@string/correct_answer"
            android:textColor="@color/primary" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/grid_item_padding_size"
            android:text="@string/point"
            android:textColor="@color/primary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/tvCorrectAnswer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/grid_item_padding_size"
            android:textColor="@color/accent"
            tools:text="24/30" />

        <TextView
            android:id="@+id/tvPoint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/grid_item_padding_size"
            android:textColor="@color/text_green"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:text="60" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:hint="@string/your_name">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <Button
            android:id="@+id/btnConfirm"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btnCancel"
            android:layout_toStartOf="@+id/btnCancel"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/accent" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/dont_save"
            android:textAllCaps="false"
            android:textColor="@color/accent" />
    </RelativeLayout>
</LinearLayout>